# src_flaglet

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  README  README.rst  conanfile.py  conanfile.txt  makefile  setup.cfg  setup.py
.github/workflows/: cpp.yml
cmake/: FindFlag.cmake  FlagletConfig.in.cmake  FlagletConfigVersion.in.cmake  conan_dependencies.cmake  exporting.cmake
doc/: c_doc.html  index.html  matlab_doc.html
doc/c/: files.html  flaglet_8h.html  flaglet_8h_source.html  flaglet__about_8c.html  flaglet__about_8c_source.html  flaglet__axisym_8c.html  flaglet__axisym_8c_source.html  flaglet__axisym_8h.html  flaglet__axisym_8h_source.html  flaglet__test_8c.html  flaglet__test_8c_source.html  flaglet__tiling_8c.html  flaglet__tiling_8c_source.html  flaglet__tiling_8h.html  flaglet__tiling_8h_source.html  globals.html  globals_defs.html  globals_func.html  index.html
doc/c/search/: all_66.js  all_6c.js  all_6d.js  all_70.js  defines_6d.js  files_66.js  functions_66.js  functions_6a.js  functions_6d.js  search.js
doc/matlab/: index.html
doc/matlab/src/main/matlab/: denoising_demo3.html  flaglet_axisym_analysis.html  flaglet_axisym_synthesis.html  flaglet_axisym_tiling.html  flaglet_check_axisym_tiling.html  flaglet_demo1.html  flaglet_demo2.html  flaglet_demo3.html  flaglet_demo4.html  flaglet_denoising_demo.html  flaglet_denoising_demo2.html  flaglet_fulltest.html  flaglet_make_doc.html  flaglet_mw_arr2vec.html  flaglet_mw_vec2arr.html  flaglet_perf_tests.html  flaglet_plot_axisym_tilling.html  flaglet_plot_axisym_wavelet_kernel.html  flaglet_plot_f.html  gen_geomodel.html  importfile.html  index.html  noise_prop_check.html  noise_prop_check_old.html  randreal.html  var2d.html  var3d.html
include/: flaglet.h  flaglet_axisym.h  flaglet_tiling.h  flaglet_transform.h  flaglet_types.h  flaglet_version.in.h
include/c/: b3let.h
src/: doxygen.config
src/c/: b3let_about.c  b3let_axisym.c  b3let_axisym.h  b3let_test.c  b3let_tilling.c  b3let_tilling.h
src/main/c/: CMakeLists.txt  flaglet_about.c  flaglet_adjoint.c  flaglet_axisym.c  flaglet_test.c  flaglet_tiling.c  flaglet_transform.c
src/main/matlab/: flaglet_analysis.m  flaglet_analysis_mex.c  flaglet_axisym_analysis.m  flaglet_axisym_analysis_mex.c  flaglet_axisym_synthesis.m  flaglet_axisym_synthesis_mex.c  flaglet_axisym_tiling.m  flaglet_axisym_tiling_mex.c  flaglet_check_axisym_tiling.m  flaglet_demo1.m  flaglet_demo2.m  flaglet_demo3.m  flaglet_demo4.m  flaglet_demo5.m  flaglet_denoising_demo.m  flaglet_denoising_demo2.m  flaglet_fulltest.m  flaglet_make_doc.m  flaglet_mw_arr2vec.m  flaglet_mw_vec2arr.m  flaglet_perf_tests.m  flaglet_plot_axisym_tilling.m  flaglet_plot_axisym_wavelet_kernel.m  flaglet_plot_f.m  flaglet_synthesis.m  flaglet_synthesis_mex.c  flaglet_tiling.m  flaglet_tiling_mex.c  gen_geomodel.m  noise_prop_check.m  plot_delta.m  randreal.m  var2d.m  var3d.m
src/main/pyflaglet/: .FLAGLET_Python_Documentation.rst  CMakeLists.txt  README.rst  __init__.py  bindings.pyx
src/main/python/: pyflaglet.pyx
src/matlab/: b3let_axisym_analysis.m  b3let_axisym_analysis_mex.c  b3let_axisym_synthesis.m  b3let_axisym_synthesis_mex.c  b3let_axisym_tilling.m  b3let_axisym_tilling_mex.c  b3let_check_axisym_tilling.m  b3let_demo1.m  b3let_demo2.m  b3let_fulltest.m  b3let_mw_arr2vec.m  b3let_mw_vec2arr.m  b3let_plot_axisym_tilling.m  b3let_plot_axisym_wavelet_kernel.m
src/test/c/: CMakeLists.txt  flaglet_test.c  test_flaglet.c
src/test/pyflaglet/: test_pyflaglet.py
